tests/ui/parser-manual-impl.stderr
error[E0277]: the trait bound `Cli: palc::__private::ParserInternal` is not satisfied
 --> tests/ui/parser-manual-impl.rs:5:17
  |
5 | impl Parser for Cli {}
  |                 ^^^ unsatisfied trait bound
  |
help: the trait `palc::__private::ParserInternal` is not implemented for `Cli`
 --> tests/ui/parser-manual-impl.rs:3:1
  |
3 | struct Cli {}
  | ^^^^^^^^^^
note: required by a bound in `Parser`
 --> src/lib.rs
  |
  | pub trait Parser: ParserInternal + Sized + 'static {
  |                   ^^^^^^^^^^^^^^ required by this bound in `Parser`
